# Roomba-Robot

./: .gitignore  README.md  todo  trashbot.urdf
trashbot/: CMakeLists.txt  package.xml
trashbot_bringup/: CMakeLists.txt  package.xml
trashbot_bringup/launch/: trashbot_autonomous.launch.py  trashbot_rviz.launch.py  turtlebot_rviz.launch.py
trashbot_description/: CMakeLists.txt  package.xml
trashbot_description/rviz/: trashbot.rviz
trashbot_description/urdf/: trashbot.urdf  turtlebot3_burger.urdf
trashbot_node/: CMakeLists.txt  package.xml
