<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trashbot</name>
  <version>0.0.0</version>
  <description>ROS packages for trashbot</description>
  <maintainer email="nawrasrq@yahoo.com">nawras</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>trashbot_bringup</exec_depend>
  <exec_depend>trashbot_description</exec_depend>
  <exec_depend>trashbot_node</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
